# golem-llm

./: Cargo.toml  Makefile.toml
golem-utils/: Cargo.toml
golem-utils/src/: assert.rs  durability.rs  lib.rs  logging.rs  params.rs
golem-utils/wit/: world.wit
golem-web-search/: Makefile.toml
golem-web-search/test/components-rust/test-web-search/: Cargo.toml  golem.yaml
golem-web-search/test/components-rust/test-web-search/src/: lib.rs
golem-web-search/test/components-rust/test-web-search/wit/: test-web-search.wit
golem-web-search/web-search/: Cargo.toml
golem-web-search/web-search/src/: config.rs  durability.rs  error.rs  lib.rs
golem-web-search/websearch-brave/: Cargo.toml
golem-web-search/websearch-brave/src/: bindings.rs  client.rs  conversions.rs  lib.rs
golem-web-search/websearch-brave/wit/: world.wit
golem-web-search/websearch-google/: Cargo.toml
golem-web-search/websearch-google/src/: client.rs  conversions.rs  lib.rs
golem-web-search/websearch-google/wit/: google.wit
golem-web-search/websearch-serper/: Cargo.toml
golem-web-search/websearch-serper/src/: bindings.rs  client.rs  conversions.rs  lib.rs
golem-web-search/websearch-serper/wit/: world.wit
golem-web-search/websearch-tavily/: Cargo.toml
golem-web-search/websearch-tavily/src/: bindings.rs  client.rs  conversions.rs  lib.rs
golem-web-search/websearch-tavily/wit/: tavily.wit  world.wit
llm/: Makefile.toml
llm/anthropic/: Cargo.toml
llm/anthropic/src/: lib.rs
llm/grok/: Cargo.toml
llm/grok/src/: lib.rs
llm/llm/: Cargo.toml
llm/llm/src/: lib.rs
llm/ollama/: Cargo.toml
llm/ollama/src/: lib.rs
llm/openai/: Cargo.toml
llm/openai/src/: lib.rs
llm/openrouter/: Cargo.toml
llm/openrouter/src/: lib.rs
test/components-rust/test-web-search/: Cargo.toml  golem.yaml
test/components-rust/test-web-search/src/: lib.rs
vector/: Makefile.toml
vector/milvus/: Cargo.toml
vector/milvus/src/: bindings.rs
vector/milvus/wit/: milvus.wit
vector/pgvector/: Cargo.toml
vector/pgvector/src/: bindings.rs
vector/pgvector/wit/: pgvector.wit
vector/pinecone/: Cargo.toml
vector/pinecone/src/: bindings.rs
vector/pinecone/wit/: pinecone.wit
vector/qdrant/: Cargo.toml
vector/qdrant/src/: bindings.rs  client.rs  conversions.rs  lib.rs
vector/qdrant/wit/: qdrant.wit
vector/vector/: Cargo.toml
vector/vector/src/: durability.rs  error.rs  lib.rs
vector/vector/wit/: vector.wit
vector/wit/: deps.toml  golem-vector.wit
web-search/: Makefile.toml
web-search/google/src/: bindings.rs  lib.rs
web-search/serper/: Cargo.toml
web-search/serper/src/: client.rs  lib.rs
web-search/serper/wit/: serper.wit
web-search/tavily/: Cargo.toml
web-search/web-search/src/: config.rs  lib.rs
web-search/web-search/wit/: web-search.wit
