[package]
name = "pgvector"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:pgvector"

[package.metadata.component.dependencies]
