[package]
name = "golem-vector-qdrant"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "WebAssembly component for working with Qdrant APIs, with special support for Golem Cloud"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["durability"]
durability = ["golem-vector/durability"]

[dependencies]
golem-vector = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }
base64 = { workspace = true }
qdrant-client = "1.15.0"
wstd = "0.5.3"

[package.metadata.component]
package = "golem:vector-qdrant"

[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.bindings.with]
"golem:vector/types@1.0.0" = "golem_vector::vector::types"
"golem:vector/collections@1.0.0" = "golem_vector::vector::collections"
"golem:vector/vectors@1.0.0" = "golem_vector::vector::vectors"
"golem:vector/search@1.0.0" = "golem_vector::vector::search"
"golem:vector/search-extended@1.0.0" = "golem_vector::vector::search_extended"
"golem:vector/connection@1.0.0" = "golem_vector::vector::connection"
"golem:vector/namespaces@1.0.0" = "golem_vector::vector::namespaces"
"golem:vector/analytics@1.0.0" = "golem_vector::vector::analytics"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:vector" = { path = "wit/deps/golem-vector" }
"wasi:io" = { path = "wit/deps/wasi:io" }
