[package]
name = "golem-websearch-serper"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "WebAssembly component for working with Serper Search API, with special support for Golem Cloud"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["durability"]
durability = ["golem-rust/durability", "golem-web-search/durability"]

[dependencies]
golem-web-search = { path = "../web-search", version = "0.0.0", default-features = false }

golem-rust = { workspace = true }
log = { workspace = true }
reqwest =  { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }
base64 = { workspace = true }

[package.metadata.component]
package = "golem:websearch-serper"

[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.bindings.with]
"golem:web-search/web-search@1.0.0" = "golem_web_search::golem::web_search::web_search"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:web-search" = { path = "wit/deps/golem-web-search" }
"wasi:io" = { path = "wit/deps/wasi:io"}
